[package]
name = "external_merge_sort"
version = "0.1.0"
authors = ["Nithish Sankaranarayanan <nithishsankaranarayanan@gmail.com>"]
edition = "2018"

[[bin]]
name = "merge_sort"
path = "src/bin/main.rs"
doc = false

[lib]
name = "external_merge_sort"
path = "src/lib.rs"

[dependencies]
rand = "0.6.5"

[dev-dependencies]
tempfile = "3.0.7"